# kernel-upf

./: .drone.yml  .gitignore  CMakeLists.txt  go.mod  go.sum  readme.md
config/: upfcfg.example.yaml  upfcfg.test.example.yaml
lib/pfcp/: CMakeLists.txt
lib/pfcp/include/: pfcp_message.h  pfcp_node.h  pfcp_types.h  pfcp_xact.h
lib/pfcp/src/: pfcp_convert.c  pfcp_message.c  pfcp_node.c  pfcp_path.c  pfcp_xact.c
lib/test/src/: testNetwork.c  testTimer.c
lib/utlt/include/: utlt_3gppTypes.h  utlt_debug.h  utlt_event.h  utlt_network.h  utlt_pool.h  utlt_timer.h
lib/utlt/logger/: logger.go
lib/utlt/src/: utlt_buff.c  utlt_debug.c  utlt_epoll.c  utlt_event.c  utlt_hash.c  utlt_lib.c  utlt_sockAddr.c  utlt_socket.c  utlt_timer.c
src/: CMakeLists.txt  upf.c  upf_config.c  upf_context.c  upf_context.h  upf_init.c  upf_init.h  upf_timer.c  upf_timer.h
src/n4/: n4_dispatcher.c  n4_pfcp_build.c  n4_pfcp_handler.c  n4_pfcp_handler.h  n4_pfcp_path.c
src/up/: up_match.c  up_path.c
updk/: CMakeLists.txt
updk/include/updk/: rule_pdr.h
updk/src/kernel/: CMakeLists.txt
updk/src/kernel/gtpv1/: CMakeLists.txt
updk/src/kernel/gtpv1/include/: gtp_tunnel.h
updk/src/kernel/gtpv1/src/: gtp_tunnel.c
updk/src/kernel/rule/: pdr.c  qer.c
